--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,23 @@ body {
   width: 100%;
 }
 
+/* Latest Videos */
+.videos {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 2rem;
+  margin-top: 6rem;
+}
+.videos__title {
+  grid-column: 1 / -1;
+  text-align: center;
+  padding: 3rem 0;
+  font-size: 4.8rem;
+  font-weight: 700;
+}
+.video {
+}
+
 /* Footer */
 .footer {
   text-align: center;
