--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,9 @@ body {
 .header {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: 80vh;
+  grid-template-rows: 100vh;
   place-items: center;
+  padding: 2rem 0;
 }
 .headerLeft {
   grid-column: 1 / span 4;
@@ -174,8 +175,6 @@ body {
   font-size: 4.8rem;
   font-weight: 700;
 }
-.video {
-}
 
 /* Footer */
 .footer {
@@ -199,4 +198,101 @@ body {
   font-size: 1.8rem;
   color: var(--color-heading);
   margin-top: 1rem;
+}
+
+/* Media queries */
+@media only screen and (max-width: 600px) {
+  .main,
+  .footer {
+    width: 90%;
+  }
+  .highlights {
+    width: 100%;
+  }
+  /* Header part */
+  .header {
+    width: 90%;
+    grid-template-rows: 50vh 50vh;
+  }
+  .headerLeft {
+    grid-column: 1 / -1;
+    grid-row: 1 / span 1;
+  }
+  .headerLeft__title {
+    width: 70%;
+    font-size: 3.6rem;
+  }
+  .headerRight {
+    grid-column: 1 / -1;
+    grid-row: 2 / span 1;
+    display: grid;
+    place-items: center;
+    padding-bottom: 6rem;
+  }
+  .headerRight__img {
+    width: 80%;
+  }
+
+  /* PlayerCards */
+  .playerCards {
+    grid-template-columns: 1fr;
+  }
+
+  /* NewsLetter */
+  .newsletter {
+    grid-template-columns: 1fr;
+    column-gap: 0;
+  }
+  .newsletter__title {
+    grid-column: 1 / -1;
+    font-size: 2.5rem;
+  }
+
+  .newsletterLeft,
+  .newsletterRight {
+    grid-column: 1 / -1;
+    justify-self: center;
+  }
+  .newsletterLeft {
+    width: 90%;
+    margin-bottom: 1.5rem;
+  }
+  .newsletterLeft__input {
+    width: 100%;
+  }
+
+  /* Highlights */
+  .highlights {
+    grid-template-columns: 1fr;
+    margin-top: 5rem;
+  }
+  .highlightLeft {
+    grid-column: 1 / -1;
+  }
+  .highlightLeft__title {
+    font-size: 3rem;
+    font-weight: 700;
+  }
+  .highlightLeft__details {
+    width: 100%;
+  }
+  .highlightRight {
+    margin-top: 3rem;
+    grid-column: 1 / -1;
+  }
+  .highlightRight__img {
+    width: 100%;
+  }
+
+  /* Latest Videos */
+  .videos {
+    grid-template-columns: 1fr;
+  }
+  .videos__title {
+    grid-column: 1 / -1;
+    text-align: center;
+    padding: 3rem 0;
+    font-size: 3rem;
+    font-weight: 700;
+  }
 }
