--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,9 @@ body {
 }
 
 .btn {
+  text-decoration: none;
   border: 0;
+  display: inline-block;
   background-color: var(--color-btn);
   color: var(--color-white);
   font-size: 1.6rem;
@@ -66,12 +68,29 @@ body {
 }
 .fa-arrow-right {
   margin-left: 1rem;
+  transition: all 0.2s;
 }
+.btn:hover .fa-arrow-right {
+  margin-left: 2rem;
+}
+
 .headerRight {
   grid-column: 5 / span 4;
 }
 .headerRight__img {
   width: 100%;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.headerRight__img:hover {
+  -webkit-transform: rotate(10deg) scale(1.2);
+  -moz-transform: rotate(10deg) scale(1.2);
+  -ms-transform: rotate(10deg) scale(1.2);
+  -o-transform: rotate(10deg) scale(1.2);
+  transform: rotate(10deg) scale(1.2);
 }
 
 /* Player cards */
